# polybar

include/: debug.hpp
include/adapters/: mpris.hpp
include/modules/: mpris.hpp
lib/: CMakeLists.txt
lib/mpris/: CMakeLists.txt
src/adapters/: mpris.cpp
src/modules/: mpris.cpp
